style.css
@charset "UTF-8";

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background: #eaebea;
  font-family: 'Space Mono', sans-serif;
}

a {
  text-decoration: none;
}

.logo {
  transform: translateX(-50%);
  -webkit-transform: translateX(-50%);
  left: 50%;
  padding: 0.4em;
  position: fixed;
  z-index: 1;
}

.links {
  padding-top: 8em;
}

.linkItem a {
  border-bottom: 1px solid rgba(255,255,255,0.1);
  border-top: 1px solid rgba(255,255,255,0.1);
  color: #25192b;
  display: block;
  font-size: 2em;
  line-height: 1.4em;
  padding: 1em 0;
  position: relative;
  text-align: center;
  text-transform: capitalize;
  width: 100%;
}

.linkItem a:visited {
  color: #25192b;
}

.linkItem a:hover {
  background: #fff;
  color: #25192b;
  cursor: pointer;
}

.linkItem a:hover:after {
  transform: translateX(10%);
  -webkit-transform: translateX(10%);
  content: '↗';
  position: absolute;
}

/* This style is only for the rules section, if you don't want them only removes this.*/

.rules {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  background: rgba(0,0,0,0.85);
  color: #fff;
  display: -ms-flexbox;
  display: -webkit-box;
  display: flex;
  height: 100vh;
  padding: 2em;
  position: fixed;
  width: 100%;
  z-index: 2;
}

.rules__title {
  letter-spacing: 0.5em;
  text-transform: uppercase;
  -webkit-transform: scaleY(0.5);
  transform: scaleY(0.5);
}

.rules p {
  margin: 0.4em 0;
  max-width: 42em;
  text-align: center;
}

.rules .code {
  background: #fff;
  color: #25192b;
  padding: 1em;
  border-radius: 10em;
}

.rules__author {
  color: rgba(255,255,255,0.5);
  padding: 2em 0;
}

.rules__author a {
  color: #fff;
  text-decoration: underline;
}

.rules__button {
  padding: 1em;
}

.rules__button.primary {
  background: #eaebea;
  color: #25192b;
}

.rules__button.close {
  background: #2e2e2e;
  color: #eaebea;
}

@media (max-width: 42em) {
  .rules {
    font-size: 14px;
  }
}

